2009-03-05  Jeremie Dimino <jeremie@dimino.org>

	* src/code/extlib/rope.mli: inverse doc of [starts_with] and [ends_with]

	* src/code/extlib/rope.ml:
	    - prevent [starts_with] and [ends_with] from failing
	    - prevent [trim] from failing when all characters are whitespaces
	    - more efficient [of_ustring]
	    - add efficient iterators, implement some TODO with them
	    - bugfix: [compare] and [icompare] where wrong
	    - prevent [lchop] and [rchop] from failing

	* src/syntax/pa_strings/pa_strings.ml:
	    - compile-time validation of utf8 strings
	    - compile-time recoding latin1 -> utf8

2009-03-04  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* doc/batteries/html/toplevel.html: Documentation on #browse added.

	* src/batteries_toolchain/batteries_help.ml: New directive #browse.

	* src/core/extlib/extPervasives.mli: Excluded printf directives from documentation generation.

	* src/core/extlib/extPrint.mli: More documentation.

	* configure.ac: Now detecting default installation directory only if $prefix is NONE

	* configure.ac: Now adapting doc installation directory to $prefix.

2009-03-04  Jeremie Dimino <jeremie@dimino.org>

	* examples/snippets/test_printf.ml: change examples

	* src/core/extlib/exrPervasives.ml*: added [pdir_{f,F,obj}]

	* src/core/extlib/extPrintf.ml*: renamed [Print]

	* src/core/extlib/extPrintf2.ml*: renamed [ExtPrint]

2009-03-03  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/extPrintf2.mli: Documentation.

2009-03-03  Jeremie Dimino <jeremie@dimino.org>

	* Makefile.in: target pa_strings.cmo -> pa_strings.cma

2009-03-02  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/extRandom.ml*: [char], [enum_chars] added

	* src/core/extlib/extString.ml*: [quote] added

2009-02-21  Jeremie Dimino <jeremie@dimino.org>
	* src/core/extlib/extPrintf2.ml*: created

	* src/core/extlib/extPervasives.ml*: added default directives
